Added visite medicale

--- a/src/app/modules/choose-item/choose-state/choose-state.component.html
+++ b/src/app/modules/choose-item/choose-state/choose-state.component.html
@@ -1,14 +1,14 @@
 <div class="modal-header p-1">
     <h5 class="modal-title title">{{title}}</h5>
-    <button type="button" class="close" aria-label="Close" (click)="onCloseModal('Cross click')">
-    <span aria-hidden="true"><i class="icon-close"></i></span>
+  <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="onCloseModal('Cross click')">
+    <span aria-hidden="true">×</span>
   </button>
 </div>
 <div class="modal-body p-0 " [class.loading]="isLoading">
     <form class="d-flex justify-content-center p-2" *ngIf="canAddItem" [formGroup]="addForm">
         <div class="input-group input-group-sm">
-            <input type="text" class="form-control" required [formControlName]="'libelle'" placeholder="nouvelle sauvegarde" [ngClass]="{'is-invalid': shouldShowRequiredError('libelle'), 'is-valid': isValid('libelle')}">
-            <button class="btn btn-sm btn-primary" type="button" (click)="onSubmit()" [disabled]="shouldDisableSubmit()">Sauvegarder</button>
+            <input type="text" class="form-control" required [formControlName]="'libelle'" (keyup.enter)="submit.click()" placeholder="nouvelle sauvegarde" [ngClass]="{'is-invalid': shouldShowRequiredError('libelle'), 'is-valid': isValid('libelle')}">
+            <button class="btn btn-sm btn-primary" type="button" (click)="onSubmit()" #submit [disabled]="shouldDisableSubmit()">Sauvegarder</button>
         </div>
     </form>
     <div *ngIf="items && items.length; else noItem">
