--- a/src/app/modules/transport/automobile/panne/panne.component.html
+++ b/src/app/modules/transport/automobile/panne/panne.component.html
@@ -1,82 +1,66 @@
 <div class="grid-container scrollable-y-75 scroll-11">
-    <div class="secondary-content" [class.sidebar_small]="selectedPanne">
-        <div class="row row-xs mg-0 pd-0 bg-light p-0">
-            <div class="col-lg-4 d-flex">
-                <div>
-                    <button [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" class="btn btn-oblong btn-primary bd-0 btn-icon mx-2 mg-t-5 mg-b-5">
-                      <i class="fal fa-plus-circle tx-14" ></i>
-                    </button>
-                </div>
-                <div class="form-group mg-t-5 mg-b-5 ">
-                    <input type="text" class="form-control form-control-sm" name="term" placeholder="recherche" [(ngModel)]="dataHelper.searchTerm" required aria-label="Batiment" aria-describedby="basic-addon2">
-                </div>
+    <div class="secondary-content" [class.sidebar_small]="selectedPanne">        
+        <div class="card card-2 card-accent-primary">
+            <div class="d-flex p-2  border-bottom">
+                <input type="text" class="form-control form-control-sm" name="term" placeholder="recherche" [(ngModel)]="dataHelper.searchTerm" required aria-label="Batiment" aria-describedby="basic-addon2">
+                <button *ngIf="_automobileId" [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" class="btn btn-oblong btn-primary bd-0 btn-icon mx-2 mg-t-5 mg-b-5">
+                    <i class="fal fa-plus-circle tx-14" ></i>
+                </button>
             </div>
-            <div class="col-lg-4">
-                <ul class="nav float-right list-inline justify-content-end">
-                    <li class="nav-item"><a class="nav-link px-1" href="#"><i class="fal fa-globe bg-white tx-danger tx-14" style="padding:6px; border-radius: 50%; "></i> </a></li>
-                    <li class="nav-item"><a class="nav-link px-1" href="#"><i class="fal fa-flag-alt bg-white tx-success-100 tx-14" style="padding:6px; border-radius: 50%; "></i> </a></li>
-                    <li class="nav-item"><a class="nav-link px-1" href="#"><i class="fal fa-chair-office bg-white tx-warning tx-14" style="padding:6px; border-radius: 50%; "></i> </a></li>
-                    <li class="nav-item"><a class="nav-link px-1" href="#"><i class="fal fa-people-carry bg-white tx-primary tx-14" style="padding:6px; border-radius: 50%; "></i> </a></li>
-                </ul>
-            </div>
-            <div class="col-lg-4">
-                <ul class="nav float-right list-inline justify-content-end">
-                    <li class="nav-item"><a class="nav-link px-1" href="#"><i class="fad fa-circle bg-light tx-gray-600 tx-12" style="padding:6px; border-radius: 50%; "></i> <span class="tx-gray-600 tx-14">Ajustement</span></a></li>
-                    <li class="nav-item"><a class="nav-link px-1" href="#"><i class="fad fa-circle bg-light tx-gray-600 tx-12" style="padding:6px; border-radius: 50%; "></i> <span class="tx-gray-600 tx-14">Affectés</span></a></li>
-                </ul>
-            </div>
-        </div>
-        <div class="table-responsive">
-            <table class="table  table-hover table-sm mb-0 " [class.loading]="dataHelper.loading$ | async">
-                <tbody>
-                    <tr class="barder-0">
-                        <th class="tx-orange tx-left tx-16 bg-jaunelight bd-b" *ngIf="!_automobileId">Vehicule</th>
-                        <th class="tx-orange tx-left tx-16 bg-jaunelight bd-b">Type de Pannes</th>
-                        <th class="tx-yeto2 tx-center tx-16 bg-bluelight">Signalé le</th>
-                        <th class="tx-yeto2 tx-center tx-16 bg-bluelight"> Niveau d'urgence</th>
-                        <th class="tx-yeto2 tx-center tx-16 bg-bluelight"> Bon de commande</th>
-                        <th class="tx-orange tx-center p-3 tx-16"> </th>
-                    </tr>
-                    <ng-container *ngIf="dataHelper.data$ | async as items">
-                        <ng-container *ngIf="items.length; else noItem">
-                            <ng-container *ngFor="let panne of items;trackBy: dataHelper.trackByFn">
-                                <tr class=" bd-b">
-                                    <td class=" " *ngIf="!_automobileId">
-                                        <div>
-                                            <p class="mg-0 tx-gray-600 tx-bolder"> {{panne.automobile.libelle | titlecase}}</p>
-                                        </div>
-                                    </td>
-                                    <td class="bg-light">
-                                        <span class=" tx-yeto3 tx-14 ">
-                                          {{panne.libelle}}
-                                        </span>
-                                    </td>
-                                    <td class="tx-center bg-white bd-r bd-white">
-                                        <div>
-                                            <p class="mg-0 tx-gray-600 tx-bolder"> {{panne.date | date: 'dd/MM/yyyy'}}</p>
-                                        </div>
-                                    </td>
-                                    <td class="tx-center bg-white bd-r bd-white">
-                                        <div>
-                                            <p class="mg-0 text-{{panne.niveau?.couleur}} tx-bolder"> {{panne.niveau?.libelle}}</p>
-                                        </div>
-                                    </td>
-                                    <td class=" tx-center ">
-                                        <button class="btn btn-sm btn-outline-primary" (click)="onSetSelected(panne)">Voir</button>
-                                    </td>
-                                    <td class=" tx-center ">
-                                        <button class="btn btn-sm btn-link" (click)="openModal(content, panne)"><i class="fad fa-search tx-14 bg-gray tx-warning " style="padding:6px; border-radius:50%"></i></button>
-                                        <button class="btn btn-sm btn-link  tx-gray-600 mx-1 tx-13" (click)="onShowUpdateForm(panne)"> <i class="fal fa-edit" ></i> </button>
-                                        <button class="btn btn-sm btn-link  tx-gray-600 mx-1 tx-13" (click)="onShowCreateForm(panne)"> <i class="fal fa-clone" ></i> </button>
-
-                                        <button class="btn btn-sm btn-link btn-link-danger tx-gray-600 tx-13" (click)="onDelete(panne)"> <i class="fal fa-trash-alt" ></i></button>
-                                    </td>
-                                </tr>
+            <div class="card-body p-0" [class.loading]="dataHelper.loading$ | async">
+                <div class="table-responsive">
+                    <table class="table  table-hover table-sm mb-0 " [class.loading]="dataHelper.loading$ | async">
+                        <tbody>
+                            <tr class="barder-0">
+                                <th class="tx-orange tx-left tx-16 bg-jaunelight bd-b" *ngIf="!_automobileId">Vehicule</th>
+                                <th class="tx-orange tx-left tx-16 bg-jaunelight bd-b">Type de Pannes</th>
+                                <th class="tx-yeto2 tx-center tx-16 bg-bluelight">Signalé le</th>
+                                <th class="tx-yeto2 tx-center tx-16 bg-bluelight"> Niveau d'urgence</th>
+                                <th class="tx-yeto2 tx-center tx-16 bg-bluelight"> Bon de commande</th>
+                                <th class="tx-orange tx-center p-3 tx-16"> </th>
+                            </tr>
+                            <ng-container *ngIf="dataHelper.data$ | async as items">
+                                <ng-container *ngIf="items.length; else noItem">
+                                    <ng-container *ngFor="let panne of items;trackBy: dataHelper.trackByFn">
+                                        <tr class=" bd-b">
+                                            <td class=" " *ngIf="!_automobileId">
+                                                <div>
+                                                    <p class="mg-0 tx-gray-600 tx-bolder"> {{panne.automobile.libelle | titlecase}}</p>
+                                                </div>
+                                            </td>
+                                            <td class="bg-light">
+                                                <span class=" tx-yeto3 tx-14 ">
+                                                  {{panne.libelle}}
+                                                </span>
+                                            </td>
+                                            <td class="tx-center bg-white bd-r bd-white">
+                                                <div>
+                                                    <p class="mg-0 tx-gray-600 tx-bolder"> {{panne.date | date: 'dd/MM/yyyy'}}</p>
+                                                </div>
+                                            </td>
+                                            <td class="tx-center bg-white bd-r bd-white">
+                                                <div>
+                                                    <p class="mg-0 text-{{panne.niveau?.couleur}} tx-bolder"> {{panne.niveau?.libelle}}</p>
+                                                </div>
+                                            </td>
+                                            <td class=" tx-center ">
+                                                <button class="btn btn-sm btn-outline-primary" (click)="onSetSelected(panne)">Voir</button>
+                                            </td>
+                                            <td class=" tx-center ">
+                                                <button class="btn btn-sm btn-link" (click)="openModal(content, panne)"><i class="fad fa-search tx-14 bg-gray tx-warning " style="padding:6px; border-radius:50%"></i></button>
+                                                <button class="btn btn-sm btn-link  tx-gray-600 mx-1 tx-13" (click)="onShowUpdateForm(panne)"> <i class="fal fa-edit" ></i> </button>
+                                                <button class="btn btn-sm btn-link  tx-gray-600 mx-1 tx-13" (click)="onShowCreateForm(panne)"> <i class="fal fa-clone" ></i> </button>
+        
+                                                <button class="btn btn-sm btn-link btn-link-danger tx-gray-600 tx-13" (click)="onDelete(panne)"> <i class="fal fa-trash-alt" ></i></button>
+                                            </td>
+                                        </tr>
+                                    </ng-container>
+                                </ng-container>
                             </ng-container>
-                        </ng-container>
-                    </ng-container>
-                </tbody>
-            </table>
+                        </tbody>
+                    </table>
+                </div>
+            </div>
         </div>
     </div>
     <div class="main-content scroll-11" [class.main-content_large]="selectedPanne">
@@ -172,4 +156,17 @@
         <button type="button " class="btn btn-outline-dark " (click)="modal.close( 'Close click') ">Fermer</button>
     </div>
 </ng-template>
+
+<!-- ADD -->
+<div class="button-fixed-bottom-right">
+    <button *ngIf="!_automobileId" [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" title="Créer"  type="button"
+      class="btn btn-primary btn-circle btn-lg">
+      <i class="fas fa-plus-circle"></i>
+    </button>
+    <!-- <button *ngIf="currentView == 'add'" title="Fermer"
+      (click)="addOrList(); setTitle('window', 'listMission'); removeItem()" type="button"
+      class="btn btn-danger btn-circle btn-lg">
+      <i class="fas fa-times"></i>
+    </button> -->
+</div>
 
