--- a/src/app/modules/transport/visite-medicale/visite-medicale.component.html
+++ b/src/app/modules/transport/visite-medicale/visite-medicale.component.html
@@ -1,9 +1,9 @@
 <div class="grid-container scrollable-y-75 scroll-11">
     <div class="secondary-content" [class.sidebar_small]="selectedPaiement">        
         <div class="card card-2 card-accent-primary">
-            <div class="d-flex p-2  border-bottom">
+            <div class="d-flex p-2  border-bottom align-items-center">
                 <input type="text" class="form-control form-control-sm" name="term" placeholder="recherche" [(ngModel)]="dataHelper.searchTerm" required aria-label="Batiment" aria-describedby="basic-addon2">
-                <button *ngIf="_automobileId" [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" class="btn btn-oblong btn-primary bd-0 btn-icon mx-2 mg-t-5 mg-b-5">
+                <button *ngIf="_conducteurId" [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" class="btn btn-oblong btn-primary bd-0 btn-icon mx-2 mg-t-5 mg-b-5">
                     <i class="fal fa-plus-circle tx-14" ></i>
                 </button>
             </div>
@@ -12,8 +12,8 @@
                     <table class="table  table-hover table-sm mb-0 " [class.loading]="dataHelper.loading$ | async">
                         <tbody>
                             <tr class="barder-0">
-                                <th class="tx-orange tx-left tx-16 bg-jaunelight bd-b" *ngIf="!_automobileId">Vehicule</th>
-                                <th class="tx-orange tx-left tx-16 bg-jaunelight bd-b">Fournisseur</th>
+                                <th class="tx-orange tx-left tx-16 bg-jaunelight bd-b" *ngIf="!_conducteurId">Conducteur</th>
+                                <th class="tx-orange tx-left tx-16 bg-jaunelight bd-b">Motif</th>
                                 <th class="tx-yeto2 tx-center tx-16 bg-bluelight"> Date  </th>
                                 <th class="tx-orange tx-center p-3 tx-16"> </th>
                             </tr>
@@ -21,16 +21,16 @@
                                 <ng-container *ngIf="items.length; else noItem">
                                     <ng-container *ngFor="let visite of items;trackBy: dataHelper.trackByFn">
                                         <tr class=" bd-b">
-                                            <td class=" " *ngIf="!_automobileId">
+                                            <td class=" " *ngIf="!_conducteurId">
                                                 <div>
-                                                    <a [routerLink]="['/transport/mes-autos', visite.auto_id]">
-                                                        <p class="mg-0 tx-gray-600 tx-bolder"> {{visite.automobile.libelle | titlecase}}</p>
+                                                    <a [routerLink]="['/transport/mes-conducteurs', visite.conducteur_id]">
+                                                        <p class="mg-0 tx-gray-600 tx-bolder"> {{visite.conducteur.libelle | titlecase}}</p>
                                                     </a>
                                                 </div>
                                             </td>
                                             <td class="tx-center bg-white bd-r bd-white">
                                                 <div>
-                                                    <p class="mg-0 tx-gray-600 tx-bolder"> {{visite.coordonnee.libelle}}</p>
+                                                    <p class="mg-0 tx-gray-600 tx-bolder"> {{visite.libelle}}</p>
                                                 </div>
                                             </td>
                                             <td class="tx-center bg-white bd-r bd-white">
@@ -81,8 +81,14 @@
           </button>
     </div>
     <div class="modal-body">
-        <h5>Description</h5>
+        <h5>Motif</h5>
         <p style="font-size: 18px;">{{modalData.libelle}}</p>
+        <h5>Diagnostic</h5>
+        <p style="font-size: 18px;">{{modalData.diagnostic}}</p>
+        <h5>Traitements Prescrits</h5>
+        <p style="font-size: 18px;">{{modalData.traitements_prescrits}}</p>
+        <h5>Commentaire</h5>
+        <p style="font-size: 18px;">{{modalData.commentaires}}</p>
     </div>
     <div class="modal-footer ">
         <button class="btn btn-light mx-2 " (click)="modal.close( 'Close click');onUpdateForm(modalData); "> <i class="fal fa-edit" style="color:#99600b"></i> Modifier</button>
@@ -92,7 +98,7 @@
 
 <!-- ADD -->
 <div class="button-fixed-bottom-right">
-    <button *ngIf="!_automobileId" [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" title="Créer"  type="button"
+    <button *ngIf="!_conducteurId" [disabled]="(dataHelper.loading$ | async)" (click)="onShowCreateForm();" title="Créer"  type="button"
       class="btn btn-primary btn-circle btn-lg">
       <i class="fas fa-plus-circle"></i>
     </button>
