--- a/src/app/components/modules/tableau/mission/mission.component.html
+++ b/src/app/components/modules/tableau/mission/mission.component.html
@@ -177,7 +177,7 @@
                                 <td>{{mission.start | date:'d MMM y'}} - {{mission.end | date:'d MMM y'}}</td>
                                 <td>{{mission.avg_note ? mission.avg_note : 'Aucune note'}}</td>
                                 <td>
-                                    {{mission.total_budget}} ECO
+                                    {{mission.total_budget}} 
                                 </td>
                             </tr>
                         </tbody>
