--- a/src/app/modules/transport/etat/etat.component.html
+++ b/src/app/modules/transport/etat/etat.component.html
@@ -9,6 +9,7 @@
                     <tr>
                         <th scope="col">Etat</th>
                         <th scope="col">Couleur</th>
+                        <th scope="col">Preview</th>
                         <th scope="col">Action</th>
                     </tr>
                 </thead>
@@ -18,8 +19,13 @@
                             {{etat.libelle}}
                         </td>
                         <td>
-                            <span class="badge badge-secondary" [style.background-color]="etat.couleur">
+                            <span class="badge badge-secondary" [style.color]="getTextColor(etat.couleur)" [style.background-color]="etat.couleur">
                               {{etat.couleur}}
+                            </span>
+                        </td>
+                        <td>
+                            <span class="badge badge-secondary" [style.color]="getTextColor(etat.couleur)" [style.background-color]="etat.couleur">
+                                {{etat.libelle}}
                             </span>
                         </td>
                         <td>
